--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-draggable-flatlist": "^2.3.3",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
